# veriscore-rs

./: Cargo.toml  LICENSE  README.md  READTIME.md  REALTIME.md
crates/veriscore-core/: Cargo.toml
crates/veriscore-core/src/: extraction.rs  jsonl.rs  lib.rs  scoring.rs  segment.rs  types.rs  util.rs  verification.rs
crates/veriscore-core/src/prompts/: claim_extraction.txt  claim_verification_binary.txt  claim_verification_ternary.txt
crates/veriscore-llm/: Cargo.toml
crates/veriscore-llm/src/: batcher.rs  cache.rs  lib.rs  openai.rs  traits.rs
crates/veriscore-reward/: Cargo.toml
crates/veriscore-reward/src/: lib.rs  reward_api.rs  reward_engine.rs  reward_types.rs
crates/veriscore-rewardd/: Cargo.toml
crates/veriscore-rewardd/src/: main.rs
crates/veriscore-runtime/: Cargo.toml
crates/veriscore-runtime/src/: config.rs  lib.rs  metrics.rs  pipeline.rs
crates/veriscore-web/: Cargo.toml
crates/veriscore-web/src/: cache.rs  lib.rs  serper.rs  web_evidence.rs
notebooks/: trl_grpo_veriscore_demo.ipynb
python/: requirements.txt  trl_grpo_reward_demo.py  veriscore_reward_client.py
src/: extraction.rs  main.rs  retrieve.rs  scoring.rs  segments.rs  serper.rs  server.rs  verification.rs
src/llm/: mod.rs  openai.rs
tests/: reward_server.rs  support.rs
