[package]
name = "veriscore-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "signal"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
futures-util = "0.3"
governor = "0.6"                        # rate limiting for Serper and LLM calls
nonzero_ext = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.5", features = ["derive"] }
unicode-segmentation = "1.11"
itertools = "0.13"
regex = "1"
md5 = "0.7"
time = { version = "0.3", features = ["macros"] }
dashmap = "6"
rusqlite = { version = "0.31", features = ["bundled"] }  # embedded caching DB
axum = { version = "0.7", features = ["macros", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# If you prefer a typed OpenAI client you can add this, otherwise keep bare reqwest.
async-openai = "0.23"
