
[workspace]
members = [
  "crates/veriscore-core",
  "crates/veriscore-llm",
  "crates/veriscore-web",
  "crates/veriscore-runtime",
  "crates/veriscore-reward",
  "crates/veriscore-rewardd",
]
resolver = "2"

[workspace.package]
name = "veriscore-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
# internal crates
veriscore-core = { path = "crates/veriscore-core" }
veriscore-llm = { path = "crates/veriscore-llm" }
veriscore-web = { path = "crates/veriscore-web" }
veriscore-runtime = { path = "crates/veriscore-runtime" }
veriscore-reward = { path = "crates/veriscore-reward" }

# external deps
anyhow = "1"
thiserror = "1"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
futures-util = "0.3"
governor = "0.6"                        # rate limiting for Serper and LLM calls
nonzero_ext = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.5", features = ["derive", "env"] }
unicode-segmentation = "1.11"
itertools = "0.13"
regex = "1"
chrono = { version = "0.4", features = ["clock"] }
md5 = "0.7"
time = { version = "0.3", features = ["macros"] }
dashmap = "6"
rusqlite = { version = "0.31", features = ["bundled"] }  # embedded caching DB
axum = { version = "0.7", features = ["macros", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tempfile = "3"
async-trait = "0.1"   # used by test mocks as well

# If you prefer a typed OpenAI client you can add this, otherwise keep bare request.
async-openai = "0.23"

[workspace.dev-dependencies]
proptest = "1"
insta = { version = "1", features = ["ron", "yaml"] }
http-body-util = "0.1"
hyper = "1"
