[package]
name = "veriscore-reward"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
veriscore-core.workspace = true
veriscore-runtime.workspace = true
