[package]
name = "veriscore-rewardd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true

veriscore-reward.workspace = true
veriscore-runtime.workspace = true
veriscore-web.workspace = true
veriscore-llm.workspace = true
